--- a/app/src/main/res/drawable/side_nav_bar.xml
+++ b/app/src/main/res/drawable/side_nav_bar.xml
@@ -2,8 +2,8 @@
     android:shape="rectangle">
     <gradient
         android:angle="135"
-        android:endColor="#0D47A1"
-        android:centerColor="#1976D2"
-        android:startColor="#2196F3"
+        android:endColor="#880E4F"
+        android:centerColor="#E91E63"
+        android:startColor="#F48FB1"
         android:type="linear" />
 </shape>
